RESOLVED FIXED174079
REGRESSION(Variation Fonts): Specifying Skia by PostScript name does not yield the expected result
https://bugs.webkit.org/show_bug.cgi?id=174079
Summary REGRESSION(Variation Fonts): Specifying Skia by PostScript name does not yiel...
Myles C. Maxfield
Reported 2017-07-02 13:13:38 PDT
REGRESSION(Variation Fonts): Specifying Skia by PostScript name does not yield the expected result
Attachments
Patch (10.31 KB, patch)
2017-07-02 13:18 PDT, Myles C. Maxfield
no flags
Patch (11.19 KB, patch)
2017-07-02 13:23 PDT, Myles C. Maxfield
no flags
Patch (11.45 KB, patch)
2017-07-02 14:22 PDT, Myles C. Maxfield
achristensen: review+
Myles C. Maxfield
Comment 1 2017-07-02 13:18:53 PDT
Myles C. Maxfield
Comment 2 2017-07-02 13:23:50 PDT
Myles C. Maxfield
Comment 3 2017-07-02 14:22:22 PDT
Myles C. Maxfield
Comment 4 2017-07-02 14:23:19 PDT
Alex Christensen
Comment 5 2017-07-03 15:06:09 PDT
Comment on attachment 314427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314427&action=review > Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:1165 > + return { adoptCF(CTFontCreateWithFontDescriptor(installedFont->fontDescriptor.get(), size, nullptr)), false }; This false is unnecessary. Does it help with readability?
Myles C. Maxfield
Comment 6 2017-07-03 15:46:33 PDT
Myles C. Maxfield
Comment 7 2017-07-03 15:47:32 PDT
Comment on attachment 314427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314427&action=review >> Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:1165 >> + return { adoptCF(CTFontCreateWithFontDescriptor(installedFont->fontDescriptor.get(), size, nullptr)), false }; > > This false is unnecessary. Does it help with readability? Yeah. In the other cases it doesn't matter, but in this case, it's explicitly necessary.
Note You need to log in before you can comment on or make changes to this bug.