REGRESSION(Variation Fonts): Specifying Skia by PostScript name does not yield the expected result https://bugs.webkit.org/show_bug.cgi?id=174079 <rdar://problem/33040854>

Reviewed by Alex Christensen.

Source/WebCore:

Because Skia is a variation font, its PostScript name contains values to apply to its variation
axes. However, WebKit's variation code was overwriting these intrinsive values with ones specified
by CSS. Therefore, the intrinsic ones were being ignored. The solution is just to pass a flag from
the lookup code to the variations code describing if the font was created via a PostScript name,
and to not apply the CSS properties to it if it was.

Test: fast/text/variations/skia-postscript-name.html

* platform/graphics/FontCache.h:
* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::preparePlatformFont):
(WebCore::platformFontLookupWithFamily):
(WebCore::fontWithFamily):

LayoutTests:

* fast/text/variations/skia-postscript-name-expected-mismatch.html: Added.
* fast/text/variations/skia-postscript-name.html: Added.
* platform/ios-simulator/TestExpectations:

Canonical link: https://commits.webkit.org/190954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219102 268f45cc-cd09-0410-ab3c-d52691b4dbfc